--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/task-manager
-spring.datasource.username=task-manager
-spring.datasource.password=J1s9oAL100
+spring.datasource.url=jdbc:mysql://localhost:3306/task_manager
+spring.datasource.username=task_manager
+spring.datasource.password=Learn2Code!
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
